# 100days_python

./: .replit  main.py  pyproject.toml
day10/: calculator  format_name
day11/: blackjack_game
day12/: global_variable  guess_number_game
day14/: higher_lower_game
day15/: coffe_machine  data
day16/: main.py  menu.py
day17/quiz-game-start/: main.py  quiz_brain.py
day20-21/snake-game/: main.py
day22/: ball.py  main.py  paddle.py
day23/snake_game_hight_score/: main.py  scoreboard.py  snake.py
day24/Mail Merge Project Start/: main.py
day25/: main.py
day25/us-states-game-start/: main.py
day26/: dic_list_comprehension
day27/: element_layout_gui.py  main.py
day28/pomodoro-start/: main.py
day29/password-manager/: data.txt  main.py
day32/: birthdays.csv  main.py
day33/kanye-quotes-start/: main.py
day34/: data.py  main.py
day8/: caesar_cypher  calculator  primenumber_checker
day9/: auction  grading_student  list_in_dictionaries
test/: class_object  inheritance
