[tool.poetry]
name = "100dayspython"
version = "0.1.0"
description = ""
authors = ["nnakhoa2310 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.0.0"
art = "^5.1"
plane-war = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
